--- a/deno.json
+++ b/deno.json
@@ -6,5 +6,8 @@
       "include": [],
       "exclude": ["ban-types", "no-cond-assign", "no-explicit-any"]
     }
+  },
+  "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.12"
   }
 }
